--- a/style.css
+++ b/style.css
@@ -1202,27 +1202,29 @@ El icono de las unidades lo añadimos como before, como estaba configurada en la
 /*---- TOC LATERAL - MENÚ DESPLEGABLE LATERAL ----*/
 /*------------------------------------------------*/
 /*Panel izquierdo*/
-body #book-index #indice .col-main {
-  border-radius: 0 var(--BorderRadius) var(--BorderRadius) 0;
-  background-image: none;
-  background-color: var(--MainColor);
-}
+
 #book-index #indice .units ul li a:not(.delete) {
-  margin: 5px 10px;
-  border-radius: var(--BorderRadius);
+  margin: 5px 0px 5px 20px;
+  border-radius: var(--BorderRadius) 0 0 var(--BorderRadius);
+  padding: 20px 15px;
 }
 body:not(.isTablet) #book-index #indice .units ul#list-units li:not(.disabled).active a,
  body #book-index #indice .units ul#list-units li:not(.disabled).active a {
-  background: var(--MainColor);
+  background-color: #cdcdcd
 }
 body:not(.isTablet) #book-index #indice .units ul#list-units li:not(.disabled):not(.active) a:hover,
  body #book-index #indice .units ul#list-units li:not(.disabled):not(.active) a:hover {
-  background: var(--MainColor);
+  background: #cdcdcd;
 }
 
 /*Panel derecho*/
+body #book-index #indice .col-main {
+  border-radius: 0 var(--BorderRadius) var(--BorderRadius) 0;
+  background-image: none;
+  background-color: #cdcdcd;
+}
 #book-index #indice .unit-content .content .title-buttons {
-  border-bottom: 2px solid #ffffff;
+  border-bottom: 2px solid var(--MainColor);
   text-align: center;
 }
 #book-index #indice .unit-content .content .title-buttons .btn {
@@ -1231,9 +1233,13 @@ body:not(.isTablet) #book-index #indice .units ul#list-units li:not(.disabled):n
 #book-index #indice .unit-content .material .title-buttons {
   margin-right: 20px; /*Para compensar los 20px de margen negativo que tiene la sección material*/
 }
+#book-index #indice .unit-content .material .item {
+  border-radius: var(--BorderRadius);
+}
 #book-index #indice .unit-content .material .item:hover,
 #book-index #indice .unit-content .material .item:focus {
-  outline: 2px solid #ffffff;
+  background-color: #0000005c;
+  box-shadow: 0 0 0 5px #0000005c;
 }
 
 /*Iconos en menú desplegable*/
